--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 		    <div id="sbi_images" style="padding: 5px;">
 				<div class="sbi_item sbi_type_image sbi_had_error" id="sbi_17864862989076658" data-date="1600272003">
-		    <div class="sbi_photo_wrap">
+		    <!-- <div class="sbi_photo_wrap">
 		        <a class="sbi_photo sbi_imgLiquid_bgSize sbi_imgLiquid_ready" href="https://www.instagram.com/p/CFNA2ydJbOm/" target="_blank" rel="noopener nofollow" data-full-res="https://scontent.cdninstagram.com/v/t51.29350-15/119431138_254646672397866_7594883864238742495_n.jpg?_nc_cat=110&amp;_nc_sid=8ae9d6&amp;_nc_ohc=b_-qt8IXo_oAX8S8wdI&amp;_nc_oc=AQlLmmYSzDoVPBEfy66cWNsqL7E_YXBtZJp4zKjG4EA4vfda4w61gWxBhvui0fBDwaI&amp;_nc_ht=scontent.cdninstagram.com&amp;oh=43900662aeb9382a7b1983a6b6fe7165&amp;oe=5F8B5E38" data-img-src-set="{&quot;d&quot;:&quot;https:\/\/scontent.cdninstagram.com\/v\/t51.29350-15\/119431138_254646672397866_7594883864238742495_n.jpg?_nc_cat=110&amp;_nc_sid=8ae9d6&amp;_nc_ohc=b_-qt8IXo_oAX8S8wdI&amp;_nc_oc=AQlLmmYSzDoVPBEfy66cWNsqL7E_YXBtZJp4zKjG4EA4vfda4w61gWxBhvui0fBDwaI&amp;_nc_ht=scontent.cdninstagram.com&amp;oh=43900662aeb9382a7b1983a6b6fe7165&amp;oe=5F8B5E38&quot;,&quot;150&quot;:&quot;https:\/\/www.instagram.com\/p\/CFNA2ydJbOm\/media?size=t&quot;,&quot;320&quot;:&quot;https:\/\/www.instagram.com\/p\/CFNA2ydJbOm\/media?size=m&quot;,&quot;640&quot;:&quot;https:\/\/scontent.cdninstagram.com\/v\/t51.29350-15\/119431138_254646672397866_7594883864238742495_n.jpg?_nc_cat=110&amp;_nc_sid=8ae9d6&amp;_nc_ohc=b_-qt8IXo_oAX8S8wdI&amp;_nc_oc=AQlLmmYSzDoVPBEfy66cWNsqL7E_YXBtZJp4zKjG4EA4vfda4w61gWxBhvui0fBDwaI&amp;_nc_ht=scontent.cdninstagram.com&amp;oh=43900662aeb9382a7b1983a6b6fe7165&amp;oe=5F8B5E38&quot;}" style="height: 83px; background-image: url(&quot;https://scontent.cdninstagram.com/v/t51.29350-15/119431138_254646672397866_7594883864238742495_n.jpg?_nc_cat=110&amp;_nc_sid=8ae9d6&amp;_nc_ohc=b_-qt8IXo_oAX8S8wdI&amp;_nc_oc=AQlLmmYSzDoVPBEfy66cWNsqL7E_YXBtZJp4zKjG4EA4vfda4w61gWxBhvui0fBDwaI&amp;_nc_ht=scontent.cdninstagram.com&amp;oh=43900662aeb9382a7b1983a6b6fe7165&amp;oe=5F8B5E38&quot;); background-size: cover; background-position: center center; background-repeat: no-repeat; opacity: 1;">
 		            <span class="sbi-screenreader">Quantum Computing is regarded as the technology of</span>
 		            	                    <img src="https://scontent.cdninstagram.com/v/t51.29350-15/119431138_254646672397866_7594883864238742495_n.jpg?_nc_cat=110&amp;_nc_sid=8ae9d6&amp;_nc_ohc=b_-qt8IXo_oAX8S8wdI&amp;_nc_oc=AQlLmmYSzDoVPBEfy66cWNsqL7E_YXBtZJp4zKjG4EA4vfda4w61gWxBhvui0fBDwaI&amp;_nc_ht=scontent.cdninstagram.com&amp;oh=43900662aeb9382a7b1983a6b6fe7165&amp;oe=5F8B5E38" alt="Quantum Computing is regarded as the technology of the millennium. It taps the power of quantum phenomena such as superposition and entanglement to build exponentially fast computers. It's applications range from molecular modelling to cryptography.
@@ -1007,7 +1007,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		    </div>
 		</div>    </div>
 
-			<div id="sbi_load">
+			<div id="sbi_load"> -->
 
 			        <a class="sbi_load_btn" href="javascript:void(0);">
 		            <span class="sbi_btn_text">Load More...</span>
