--- a/index.html
+++ b/index.html
@@ -797,9 +797,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 	</section>
 
+<!-- Data Row -->
+<section id="dataRow">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-3">
+
+			</div>
+		</div>
 
 
-	<!-- contact section -->
+	</div>
+
+</section>
 
 
 
