--- a/index.html
+++ b/index.html
@@ -873,14 +873,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- Footer -->
 
 	<footer id="footer">
-		<div class="row cr">
-			<div class="col-md-6 spaceIcons">
-				<a href="https://www.facebook.com/ieee.mbcet/"> <i class="fa fa-facebook fa-lg bottom-icon" aria-hidden="true"></i></a>
-				<a href="https://www.instagram.com/ieeesbmbcet/"> <i class="fa fa-instagram fa-lg bottom-icon" aria-hidden="true"></i></a>
-				<a href="mailto:ieeembcet2020@gmail.com"><i class="fa fa-envelope-o fa-lg bottom-icon" aria-hidden="true"></i></a>
-			</div>
-			<div class="col-md-6 spaceCopyright">
-				<p class="copyright"><a class="footer-link" href="https://w3layouts.com/"></a></p>
+		<div class="cr">
+			<div class=" spaceCopyright">
+				<p class="copyright">All rights Reserved.<a class="footer-link" href="https://w3layouts.com/"></a></p>
 			</div>
 		</div>
 
