--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html>
 
 <head>
-	<link rel="shortcut icon" href="images/lo1`.jpeg" type="image/x-icon">
+	<link rel="shortcut icon" href="images/IEEE MBCET white.png" type="image/x-icon">
 	<title>IEEE MBCET | Home page</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -16,6 +16,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+	<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap" rel="stylesheet">
+
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all" />
@@ -44,50 +48,51 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 
 	<section class="w3l-bootstrap-header">
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
 			<div class="w-100 row justify-content-between">
-				<div class="logo pl-lg-5" id="logo">
-					<div class="pl-lg-5">
-						<img src="images/IEEE MBCET white.png" class="img-fluid" style="height: 50px;">
-					</div>
+			<div class="logo pl-lg-5" id="logo">
+				<div class="pl-lg-5">
+					<img src="images/IEEE MBCET white.png" class="img-fluid" style="height: 50px;">
 				</div>
+			</div>
 
-				<!-- if logo is image enable this
+			<!-- if logo is image enable this
 		  <a class="navbar-brand" href="#index.html">
 			  <img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
 		  </a> -->
-				<button class="navbar-toggler ham" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon fa fa-bars"></span>
-				</button>
+			<button class="navbar-toggler ham" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+			  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon fa fa-bars"></span>
+			</button>
 
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav ml-auto">
-						<li class="nav-item pr-5 ">
-							<a class="nav-link" href="index.html">Home</a>
-						</li>
-						<li class="nav-item pr-5 ">
-							<a class="nav-link" href="#about">About</a>
-						</li>
-						<li class="nav-item pr-5 ">
-							<a class="nav-link" href="#service">Chapters</a>
-						</li>
-						<li class="nav-item pr-5 ">
-							<a target="_blank" class="nav-link" href="#imgg1">Team</a>
-						</li>
-						<li class="nav-item pr-5 ">
-							<a class="nav-link" href="#recentEvents">Events</a>
-						</li>
-						<li class="nav-item pr-5 ">
-							<a class="nav-link" href="#portfolio">Gallery</a>
-						</li>
-						<li class="nav-item pr-5 ">
-							<a class="nav-link" href="#contact">Contact</a>
-						</li>
-					</ul>
-				</div>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			  <ul class="navbar-nav ml-auto">
+				<li class="nav-item pr-5 ">
+				  <a class="nav-link" href="index.html">Home</a>
+				</li>
+				<li class="nav-item pr-5 ">
+				  <a class="nav-link" href="#about">About</a>
+				</li>
+				  <li class="nav-item pr-5 ">
+				  <a class="nav-link" href="#service">Chapters</a>
+				</li>
+				<li class="nav-item pr-5 ">
+				  <a target="_blank" class="nav-link" href="#imgg1">Team</a>
+				</li>
+				<li class="nav-item pr-5 ">
+					<a class="nav-link" href="#recentEvents">Events</a>
+				  </li>
+				  <li class="nav-item pr-5 ">
+					<a class="nav-link" href="#portfolio">Gallery</a>
+				  </li>
+				  <li class="nav-item pr-5 ">
+					<a class="nav-link" href="#contact">Contact</a>
+				  </li>
+			  </ul>
 			</div>
+		  </div>
 		</nav>
-	</section>
+	  </section>
 
 
 	<!-- banner section -->
@@ -173,11 +178,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<section class="about-w3l" id="about" data-aos="zoom-in">
 		<div class="container">
 			<div class="col-lg-6 col-md-6 col-sm-12">
-				<h2>About</h2>
+				<h2 class="text-center">ABOUT</h2>
 				<p>The IEEE student branch of Mar Baselios College of Engineering & Technology was established on February 14, 2006 by Dr G Vijayaraghavan, former Chairperson of IEEE Kerala Section and Founder & CEO of Technopark, Trivandrum. IEEE MBCET
 					falls under IEEE Kerala Section which is a part of the IEEE India Council which falls under Region 10 (Asia Pacific & Australia) of the global IEEE geography. We started our journey with 52 members and in 2008 it reached 103.</p>
-				<p>Society chapters are bodies that work for the advancements of one particular field of technology. We have the IEEE Computer Society student chapter integrated with our student branch to cater the advancements in the field of Computer
-					Technologies.</p>
+				<p>Society chapters are bodies that work for the advancements of one particular field of technology.</p>
 			</div>
 			<div class="col-lg-6 col-md-6 col-sm-12">
 				<div id="slideshow-banner">
@@ -195,22 +199,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<ul class="row">
 				<li class="col-12 col-md-8 col-lg-4 mb-5 mt-5 pt-5 pb-5">
 					<div class="cnt-block equal-hight" style="height: 280px;">
-						<figure><img src="images/bursar.jpg" width="340" height="100" class="img-responsive" alt=""></figure>
-						<h3>Fr. John Vilayil</h3>
+						<figure class="ml-5"><img src="images/_JVS1639.jpg" width="340" height="100" class="img-responsive" alt=""></figure>
+						<h3 class="text-center pt-3"><b>Fr. John Vilayil</b></h3>
 						<p><b>Bursar</b></p>
 					</div>
 				</li>
 				<li class="col-12 col-md-8 col-lg-4 mb-5 mt-5 pt-5 pb-5">
-					<div class="cnt-block equal-hight" width="340" height="380" style="height: 280px;">
-						<figure><img src="images/Prin.jpeg" class="img-responsive" alt=""></figure>
-						<h3>Dr. T M George</h3>
+					<div class="cnt-block equal-hight" style="height: 280px;">
+						<figure class="ml-5"><img src="images/Prin.jpeg" width="340" height="380" class="img-responsive" alt=""></figure>
+						<h3 class="text-center pt-3"><b>Dr. T M George</b></h3>
 						<p><b>Principal</b></p>
 					</div>
 				</li>
 				<li class="col-12 col-md-8 col-lg-4 mb-5 mt-5 pt-5 pb-5">
-					<div class="cnt-block equal-hight" width="340" height="300" style="height: 280px;">
-						<figure><img src="images/Vice.jpg" class="img-responsive" alt=""></figure>
-						<h3>Prof. S. Viswanatha Rao</h3>
+					<div class="cnt-block equal-hight"  style="height: 280px;">
+						<figure class="ml-5"><img src="images/Vice.jpg" width="340" height="300" class="img-responsive" alt=""></figure>
+						<h3 class="text-center pt-3"><b>Prof. S. Viswanatha Rao</b></h3>
 						<p><b>Vice Principal</b></p>
 					</div>
 				</li>
@@ -244,17 +248,17 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- /about section -->
 	<!-- services section -->
 
-	<section class="imagges" id="imgg1">
+    <section class="imagges" id="imgg1">
 		<div class="container">
-			<img src="images/DSC_4803.jpg" alt="Snow">
-			<button class="btn"><a target="_blank" href="team.html">TEAM</a></button>
+			<img src="images/DSC_4803.jpg" alt="blur">
+			<a target="_blank" href="team.html"></a>
 		</div>
 	</section>
 
 	<!-- Recent Events -->
 	<section class="team-agileinfo jarallax blog-w3layouts" id="recentEvents">
 		<div class="container gap">
-			<h3 class="text-center">RECENT EVENTS</h3>
+			<h3 class="text-center">EVENTS</h3>
 			<span class="fa fa-star-o" aria-hidden="true"></span>
 			<div class="col-lg-4 col-md-4 col-sm-12">
 				<div class="blog-agile dap" data-aos="zoom-in">
@@ -403,10 +407,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 	</section>
 
-	<!-- IEEE Chapters -->
+
 	<section class="service-w3l jarallax" id="service">
 		<div class="container">
-			<h3 class="text-center">Chapters</h3>
+			<h3 class="text-center">CHAPTERS</h3>
 			<span class="fa fa-star-o" aria-hidden="true"></span>
 			<div class="col-lg-4 col-md-4 col-sm-12 serv-agileinfo1">
 				<div class="col-lg-12 col-md-12 col-sm-6 serv-wthree1" data-aos="zoom-in">
@@ -423,7 +427,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 						</li>
 					</ul>
-					<h4 class="text-center">Computer<p>Society</p>
+					<h4 class="text-center">Computer Society
 					</h4>
 					<p class="text-center"></p>
 				</div>
@@ -527,7 +531,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</section>
 
 
-	<!-- Annual Reports -->
+	<!-- Annual Report -->
 	<section class="team-agileinfo jarallax" id="annualReport">
 		<div class="annual">
 			<h3 class="text-center mb-3">Annual Reports</h3>
@@ -575,11 +579,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 	</section>
 
-
 	<!-- Our Galary -->
 	<section class="portfolio-agileinfo" id="portfolio">
 		<div class="container">
-			<h3 class="text-center">Our Gallery</h3>
+			<h3 class="text-center">GALLERY</h3>
 			<span class="fa fa-star-o" aria-hidden="true"></span>
 			<div id="grid-gallery" class="grid-gallery">
 				<section class="grid-wrap">
@@ -587,7 +590,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li class="grid-sizer"></li><!-- for Masonry column width -->
 						<li data-aos="zoom-in">
 							<figure>
-								<img src="images/1.1.jpg" alt="img01" class="img-responsive" />
+								<img src="images/1.1.jpg" alt="img01" class="img-responsive1" />
 							</figure>
 						</li>
 						<li data-aos="zoom-in">
@@ -797,6 +800,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 	</section>
 
+
+
+
 	<!-- Data Row -->
 	<section id="dataRow">
 		<div class="container">
@@ -875,7 +881,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<footer id="footer">
 		<div class="cr">
 			<div class=" spaceCopyright">
-				<p class="copyright">All rights Reserved.<a class="footer-link" href="https://w3layouts.com/"></a></p>
+				<p class="copyright">All rights Reserved.</p>
 			</div>
 		</div>
 
@@ -883,7 +889,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</footer>
 
 
-	<!-- /copyright section -->
 	<!-- back to top -->
 	<a href="#0" class="cd-top backtop">Top</a>
 	<!-- /back to top -->
