--- a/recentEvents.html
+++ b/recentEvents.html
@@ -27,6 +27,7 @@
   <!-- /css files -->
 
   <!-- fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="all" rel="stylesheet" type="text/css">
