--- a/index.html
+++ b/index.html
@@ -810,22 +810,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col-md-3 col-xs-6">
 					<a href="#" class="dataRowBtn"><i class="fas fa-user fa-lg"></i></a>
 					<h5 class="headS">MEMBERS</h5>
-					<p>300</p>
+					<p class="dataP">300</p>
 				</div>
 				<div class="col-md-3 col-xs-6">
 					<a href="#" class="dataRowBtn"><i class="fas fa-users fa-lg"></i></a>
 					<h5 class="headS">SOCIETY</h5>
-					<p>6</p>
+					<p class="dataP">6</p>
 				</div>
 				<div class="col-md-3 col-xs-6">
 					<a href="#" class="dataRowBtn"><i class="far fa-calendar-alt fa-lg"></i></a>
 					<h5 class="headS">YEARS</h5>
-					<p>10</p>
+					<p class="dataP">10</p>
 				</div>
 				<div class="col-md-3 col-xs-6">
 					<a href="#" class="dataRowBtn"><i class="fas fa-bullseye fa-lg"></i></a>
 					<h5 class="headS">MISSION</h5>
-					<p>1</p>
+					<p class="dataP">1</p>
 				</div>
 			</div>
 		</div>
@@ -856,7 +856,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 				<div class="col-6">
 					<div class="bor">
-						<h2>Social Media</h2>
+						<h2 class="borh2">Social Media</h2>
 						<div class="row cr">
 							<div class="col ko">
 								<a href="https://www.instagram.com/ieeesbmbcet/"> <i class="fa fa-instagram fa-2x bottom-iconalt" aria-hidden="true"></i></a>
