--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 	</section>
 
-
+<!-- Chapters -->
 	<section class="service-w3l jarallax" id="service">
 		<div class="container">
 			<h3 class="text-center">CHAPTERS</h3>
