--- a/index.html
+++ b/index.html
@@ -782,22 +782,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 col-xs-6">
-					<a href="#" class="dataRowBtn"><i class="fas fa-user fa-lg"></i></a>
+					<a href="" class="dataRowBtn"><i class="fas fa-user fa-lg"></i></a>
 					<h5 class="headS">MEMBERS</h5>
 					<p class="dataP">300</p>
 				</div>
 				<div class="col-md-3 col-xs-6">
-					<a href="#" class="dataRowBtn"><i class="fas fa-users fa-lg"></i></a>
+					<a href="" class="dataRowBtn"><i class="fas fa-users fa-lg"></i></a>
 					<h5 class="headS">SOCIETY</h5>
 					<p class="dataP">6</p>
 				</div>
 				<div class="col-md-3 col-xs-6">
-					<a href="#" class="dataRowBtn"><i class="far fa-calendar-alt fa-lg"></i></a>
+					<a href="" class="dataRowBtn"><i class="far fa-calendar-alt fa-lg"></i></a>
 					<h5 class="headS">YEARS</h5>
 					<p class="dataP">10</p>
 				</div>
 				<div class="col-md-3 col-xs-6">
-					<a href="#" class="dataRowBtn"><i class="fas fa-bullseye fa-lg"></i></a>
+					<a href="" class="dataRowBtn"><i class="fas fa-bullseye fa-lg"></i></a>
 					<h5 class="headS">MISSION</h5>
 					<p class="dataP">1</p>
 				</div>
