changed the data counter ( though not working )

--- a/index.html
+++ b/index.html
@@ -194,6 +194,37 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 		</div>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+		<!-- ======= Counts Section ======= -->
+		<section id="counts" class="counts">
+			<div class="container">
+	  			<div class="row counters">
+	  
+				<div class="col-lg-3 col-6 text-center">
+				  <span data-toggle="counter-up">300</span>
+				  <p>MEMBERS</p>
+				</div>
+	  
+				<div class="col-lg-3 col-6 text-center">
+				  <span data-toggle="counter-up">6</span>
+				  <p>SOCIETIES</p>
+				</div>
+	  
+				<div class="col-lg-3 col-6 text-center">
+				  <span data-toggle="counter-up">10</span>
+				  <p>YEARS</p>
+				</div>
+	  
+				<div class="col-lg-3 col-6 text-center">
+				  <span data-toggle="counter-up">1</span>
+				  <p>MISSION</p>
+				</div>
+	  
+			  </div>
+	  
+			</div>
+		  </section><!-- End Counts Section -->
+
 		<div class="container">
 			<ul class="row">
 				<li class="col-12 col-md-8 col-lg-4 mb-5 mt-5 pt-5 pb-5">
@@ -778,7 +809,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 
 	<!-- Data Row -->
-	<section id="dataRow">
+	<!--<section id="dataRow">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 col-xs-6">
@@ -804,6 +835,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			</div>
 		</div>
 	</section>
+-->
 
 
 	<!-- Social Media -->
@@ -924,7 +956,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- font awesome -->
 	<script src="https://kit.fontawesome.com/563abdb11b.js" crossorigin="anonymous"></script>
 
-	<!-- /js files -->
+	<!-- /js files -->]
+	
 </body>
+
 
 </html>
