--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<section class="imagges" id="imgg1">
 		<div class="container">
 			<img src="images/DSC_4803.jpg" alt="blur">
-			<a target="_blank" href="team.html"></a>
+			<a target="_blank" href="team.html">TEAM</a>
 		</div>
 	</section>
 
