--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <!DOCTYPE HTML>
 <html>
-
 <head>
 	<link rel="shortcut icon" href="images/IEEE MBCET white.png" type="image/x-icon">
 	<title>IEEE MBCET | Home page</title>
@@ -76,7 +75,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<a class="nav-link" href="#service">Chapters</a>
 						</li>
 						<li class="nav-item pr-5 ">
-							<a target="_blank" class="nav-link" href="#imgg1">Team</a>
+							<a class="nav-link" href="#imgg1">Team</a>
 						</li>
 						<li class="nav-item pr-5 ">
 							<a class="nav-link" href="#recentEvents">Events</a>
@@ -281,7 +280,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<section class="imagges" id="imgg1">
 		<div class="container">
 			<img src="images/DSC_4803.jpg" alt="blur">
-			<a target="_blank" href="team.html">TEAM</a>
+				<div class="centered"><a href="team.html" target="_blank" style="">TEAM</a> </div>
 		</div>
 	</section>
 
