--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<section class="imagges" id="imgg1">
 		<div class="container">
 			<img src="images/DSC_4803.jpg" alt="blur">
-				<div class="centered"><a href="team.html" target="_blank" style="">TEAM</a> </div>
+				<div class="centered"><a href="team.html" target="_blank" style="color: white;">TEAM</a> </div>
 		</div>
 	</section>
 
