--- a/team.html
+++ b/team.html
@@ -41,7 +41,7 @@
         <section id="team" class="our-webcoderskull padding-lg">
             <div class="container">
               <div class="row heading heading-icon">
-                  <h2 class="text-dark" >Team</h2>
+                  <h2 class="text-white" >Team</h2>
               </div>
               <ul class="row">
                   <li class="col-12 col-md-12 col-lg-6">
