--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 		<div class="pogoSlider" id="js-main-slider">
 
-			<div class="pogoSlider-slide " data-transition="horizontalSlide" data-duration="2000" style="background-image:url(images/s\ of.jpeg);">
+			<div class="pogoSlider-slide " data-transition="horizontalSlide" data-duration="2000" style="background-image:url(images/WIE.jpeg);">
 				<div class="pogoSlider-slide-element">
 					<div class="container">
 						<div class="container-upcoming">
 							<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 footer-agile1 " data-aos="zoom-in">
-								<h3 class="txtUpcomming"><b><strong>Upcoming Events</strong></b></h3>
+								<h3 class="txtUpcomming"><b><strong style="color: cornflowerblue;">Upcoming Events</strong></b></h3>
 								<p class="footer-p1"> </p>
 								<div class="subscribe">
 									<form action="#" method="post">
@@ -124,12 +124,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</div>
 				</div>
 			</div>
-			<div class="pogoSlider-slide " data-transition="horizontalSlide" data-duration="2000" style="background-image:url(images/techhhh.jpeg);">
+			<div class="pogoSlider-slide " data-transition="horizontalSlide" data-duration="2000" style="background-image:url(images/cs.jpeg);">
 				<div class="pogoSlider-slide-element">
 					<div class="container">
 						<div class="container-upcoming">
 							<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 footer-agile1 " data-aos="zoom-in">
-								<h3 class="txtUpcomming"><b><strong>Upcoming Events</strong></b></h3>
+								<h3 class="txtUpcomming"><b><strong style="color: cornflowerblue;">Upcoming Events</strong></b></h3>
 								<p class="footer-p1"> </p>
 								<div class="subscribe">
 									<form action="#" method="post">
