--- a/team.html
+++ b/team.html
@@ -41,7 +41,7 @@
         <section id="team" class="our-webcoderskull padding-lg">
             <div class="container">
               <div class="row heading heading-icon">
-                  <h2 class="text-white" >Team</h2>
+                  <h2 class="text-dark" >Team</h2>
               </div>
               <ul class="row">
                   <li class="col-12 col-md-12 col-lg-6">
@@ -199,7 +199,7 @@
                         <figure><img src="images/IMG_8398.jpg" class="img-responsive" alt=""></figure>
                         <h3>Arya S Potti</h3>
                         <p><b>WIE</b></p>
-                            <span>Chairperson</span>
+                            <span style="color: black;" >Chairperson</span>
                       </div>
                   </li>
                   <li class="col-12 col-md-6 col-lg-3">
@@ -207,7 +207,7 @@
                         <figure><img src="images/IMG_20200810_002716.jpg" class="img-responsive" alt=""></figure>
                         <h3>Swetha B E</h3>
                         <p><b>WIE</b></p>
-                            <span>Secretary</span>
+                            <span style="color: black;" >Secretary</span>
                       </div>
                   </li>
                   <li class="col-12 col-md-6 col-lg-3">
@@ -215,7 +215,7 @@
                         <figure><img src="images/VV.jpg" class="img-responsive" alt=""></figure>
                         <h3>Vipina V V</h3>
                         <p><b>EMBS</b></p>
-                          <span>Chairperson</span>
+                          <span style="color: black;" >Chairperson</span>
                       </div>
                    </li>
                   <li class="col-12 col-md-6 col-lg-3">
@@ -223,7 +223,7 @@
                         <figure><img src="images/ann.jpg" class="img-responsive" alt=""></figure>
                         <h3>Ann Elizabeth B.</h3>
                         <p><b>EMBS</b></p>
-                        <span></span>Secretary</span>
+                        <span style="color: black;" ></span>Secretary</span>
                       </div>
                   </li>
               </ul>
@@ -233,7 +233,7 @@
                         <figure><img src="images/FB_IMG_1592488181321.jpg" class="img-responsive" alt=""></figure>
                         <h3>Abhilash G Nair</h3>
                         <p><b>SP</b></p>
-                        <span>Chairperson</span>
+                        <span style="color: black;" >Chairperson</span>
                       </div>
                    </li>
                   <li class="col-12 col-md-6 col-lg-3">
@@ -241,7 +241,7 @@
                         <figure><img src="images/Lechu.png" class="img-responsive" alt=""></figure>
                         <h3>G Lakshmi</h3>
                         <p><b>SP</b></p>
-                        <span>Secretary</span>
+                        <span style="color: black;" >Secretary</span>
                       </div>
                   </li>
                   <li class="col-12 col-md-6 col-lg-3">
@@ -249,7 +249,7 @@
                         <figure><img src="images/Arun.jpg" class="img-responsive" alt=""></figure>
                         <h3>Arun H P</h3>
                         <p><b>RAS</b></p>
-                        <span>Chairperson</span>
+                        <span style="color: black;" >Chairperson</span>
                       </div>
                   </li>
                   <li class="col-12 col-md-6 col-lg-3">
@@ -257,7 +257,7 @@
                         <figure><img src="images/devu.jpeg" class="img-responsive" alt=""></figure>
                         <h3>Devika S R</h3>
                         <p><b>RAS</b></p>
-                        <span>Secretary</span>
+                        <span style="color: black;" >Secretary</span>
                       </div>
                   </li>
               </ul>
@@ -267,7 +267,7 @@
                         <figure><img src="images/Screenshot_20200908-105539__01.jpg" class="img-responsive" alt=""></figure>
                         <h3>Jessno Oommem J.</h3>
                         <p><b>SIGHT</b></p>
-                        <span>Chairperson</span>
+                        <span  style="color: black;" >Chairperson</span>
                       </div>
                    </li>
                   <li class="col-12 col-md-6 col-lg-3">
@@ -275,7 +275,7 @@
                         <figure><img src="images/akshaya.png" class="img-responsive" alt=""></figure>
                         <h3>Akshaya D R</h3>
                         <p><b>SIGHT</b></p>
-                        <span>Secretary</span>
+                        <span  style="color: black;" >Secretary</span>
                       </div>
                   </li>
                   <li class="col-12 col-md-6 col-lg-3">
@@ -283,7 +283,7 @@
                         <figure><img src="images/kesia.jpg" class="img-responsive" alt=""></figure>
                         <h3>Kesia Mary Jaies</h3>
                         <p><b>CS</b></p>
-                        <span>Chairperson</span>
+                        <span style="color: black;" >Chairperson</span>
                       </div>
                   </li>
                   <li class="col-12 col-md-6 col-lg-3">
@@ -291,7 +291,7 @@
                         <figure><img src="images/Sujin.jpg" class="img-responsive" alt=""></figure>
                         <h3>Sujin S</h3>
                         <p><b>CS</b></p>
-                        <span>Secretary</span>
+                        <span style="color: black;" >Secretary</span>
                       </div>
                   </li>
               </ul>
