--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 				<div class="col-6 abtIeee">
 					<img src="images/ieee-mb-black-png.png" height="20%" alt="">
-					<p class="don">IEEE is the world`s largest technical professional organization dedicated to advancing technology for the benefit of humanity.</p>
+					<p class="don" style="color: black;">IEEE is the world`s largest technical professional organization dedicated to advancing technology for the benefit of humanity.</p>
 				</div>
 
 			</div>
