--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html>
 <head>
 	<link rel="shortcut icon" href="images/IEEE MBCET white.png" type="image/x-icon">
+	<!-- title -->
 	<title>IEEE MBCET | Home page</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
