--- a/index.html
+++ b/index.html
@@ -868,19 +868,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 			</div> -->
 
-                <div class="col-6">
+                <div class="col-md-6 col-sm-12">
                     <div class="bor">
                         <h2 class="borh2">Social Media</h2>
                         <div class="row cr">
                             <div class="col ko">
                                 <a href="https://www.instagram.com/ieeesbmbcet/"> <i class="fa fa-instagram fa-2x bottom-iconalt" aria-hidden="true"></i></a>
                                 <a href="mailto:ieeembcet2020@gmail.com"><i class="fa fa-envelope-o fa-2x bottom-iconalt" aria-hidden="true"></i></a>
+                                <a href="https://www.facebook.com/"> <i class="fa fa-facebook fa-2x bottom-iconalt" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-6 abtIeee">
+                <div class="col-md-6 col-sm-12 abtIeee">
                     <img src="images/ieee-mb-black-png.png" height="20%" alt="">
                     <p class="don" style="color: black;">IEEE is the world`s largest technical professional organization dedicated to advancing technology for the benefit of humanity.</p>
                 </div>
