--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 			</div> -->
 
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-6 col-sm-12 socialMedia">
                     <div class="bor">
                         <h2 class="borh2">Social Media</h2>
                         <div class="row cr">
@@ -883,9 +883,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
                 <div class="col-md-6 col-sm-12 abtIeee">
                     <img src="images/ieee-mb-black-png.png" height="20%" alt="">
-                    <p class="don" style="color: black;">IEEE is the world`s largest technical professional organization dedicated to advancing technology for the benefit of humanity.</p>
+                    <p class="don" style="color: black;">IEEE is the world's largest technical professional organization dedicated to advancing technology for the benefit of humanity.</p>
                 </div>
-
             </div>
 
     </section>
