--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <ul class="row">
                 <li class="col-12 col-md-8 col-lg-4 mb-5 mt-5 pt-5 pb-5">
                     <div class="cnt-block equal-hight" style="height: 280px;">
-                        <figure class="ml-5"><img src="images/bursar.jpg" width="340" height="100" class="img-responsive" alt=""></figure>
+                        <figure><img src="images/bursar.jpg" class="img-responsive" alt=""></figure>
                         <h3 class="text-center pt-3"><b>Fr. John Vilayil</b></h3>
                         <p><b>Bursar</b></p>
                     </div>
