--- a/index.html
+++ b/index.html
@@ -210,13 +210,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </div>
 
                     <div class="col-lg-3 col-6 text-center">
-                        <span data-toggle="counter-up">6</span>
-                        <p>SOCIETIES</p>
+                        <span data-toggle="counter-up">10</span>
+                        <p>YEARS</p>
                     </div>
 
                     <div class="col-lg-3 col-6 text-center">
-                        <span data-toggle="counter-up">10</span>
-                        <p>YEARS</p>
+                        <span data-toggle="counter-up">7</span>
+                        <p>SOCIETIES</p>
                     </div>
 
                     <div class="col-lg-3 col-6 text-center">
@@ -235,21 +235,21 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <li class="col-12 col-md-8 col-lg-4 mb-5 mt-5 pt-5 pb-5">
                     <div class="cnt-block equal-hight" style="height: 280px;">
                         <figure><img src="images/bursar.jpg" class="img-responsive" alt=""></figure>
-                        <h3 class="text-center pt-3"><b>Fr. John Vilayil</b></h3>
+                        <h3 class="text-center pt-3" style="font-size: 20px;" ><b>Fr. John Vilayil</b></h3>
                         <p><b>Bursar</b></p>
                     </div>
                 </li>
                 <li class="col-12 col-md-8 col-lg-4 mb-5 mt-5 pt-5 pb-5">
                     <div class="cnt-block equal-hight" style="height: 280px;">
-                        <figure class="ml-5"><img src="images/Prin.jpeg" width="340" height="380" class="img-responsive" alt=""></figure>
-                        <h3 class="text-center pt-3"><b>Dr. T M George</b></h3>
+                        <figure><img src="images/Prin.jpeg"class="img-responsive" alt=""></figure>
+                        <h3 class="text-center pt-3" style="font-size: 20px;" ><b>Dr. T M George</b></h3>
                         <p><b>Principal</b></p>
                     </div>
                 </li>
                 <li class="col-12 col-md-8 col-lg-4 mb-5 mt-5 pt-5 pb-5">
                     <div class="cnt-block equal-hight" style="height: 280px;">
-                        <figure class="ml-5"><img src="images/Vice.jpg" width="340" height="300" class="img-responsive" alt=""></figure>
-                        <h3 class="text-center pt-3"><b>Prof. S. Viswanatha Rao</b></h3>
+                        <figure><img src="images/Vice.jpg" class="img-responsive" alt=""></figure>
+                        <h3 class="text-center pt-3" style="font-size: 20px;" ><b>Prof. S. Viswanatha Rao</b></h3>
                         <p><b>Vice Principal</b></p>
                     </div>
                 </li>
