--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <a class="nav-link" href="#portfolio">Gallery</a>
                         </li>
                         <li class="nav-item pr-5 ">
-                            <a class="nav-link" href="#contact">Contact</a>
+                            <a class="nav-link" href="#media">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -568,7 +568,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- Annual Report -->
     <section class="team-agileinfo jarallax" id="annualReport">
         <div class="annual">
-            <h3 class="text-center mb-3">Annual Reports</h3>
+            <h3 class="text-center mb-3">ANNUAL REPORTS</h3>
             <span class="fa fa-star-o" aria-hidden="true"></span>
             <div class="container" data-aos="zoom-in">
                 <div class="row" id="report">
