--- a/recentEvents.html
+++ b/recentEvents.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html xml:lang>
 
 <head>
     <link rel="shortcut icon" href="images/lo1`.jpeg" type="image/x-icon">
@@ -38,9 +38,6 @@
 </head>
 
 <body>
-
-
-
 
     <!-- Recent Events -->
     <section class="team-agileinfo jarallax blog-w3layouts" id="recentEvents">
