--- a/recent_events.html
+++ b/recent_events.html
@@ -43,3 +43,91 @@
     <section class="team-agileinfo jarallax blog-w3layouts" id="recentEvents">
         <h3 class="text-center">EVENTS</h3>
         <span class="fa fa-star-o" aria-hidden="true"></span>
+    </section>
+    <!-- Footer -->
+
+    <footer id="footer">
+        <div class="row cr">
+            <div class="col-md-6 spaceIcons">
+
+                <a href="https://www.facebook.com/ieee.mbcet/"> <i class="fa fa-facebook fa-lg bottom-icon" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com/ieeesbmbcet/"> <i class="fa fa-instagram fa-lg bottom-icon" aria-hidden="true"></i></a>
+
+            </div>
+            <div class="col-md-6 spaceCopyright">
+                <p class="copyright">
+                    <a class="footer-link" href="https://w3layouts.com/"></a>
+                </p>
+            </div>
+        </div>
+
+
+    </footer>
+
+
+
+    <!-- back to top -->
+    <a href="#0" class="cd-top backtop">Top</a>
+
+
+    <!-- js files -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/smoothscroll.js"></script>
+    <script src='js/aos.js'></script>
+    <script src="js/lazyload.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/grayscale.js"></script>
+    <script src="js/jarallax.js"></script>
+    <script type="text/javascript">
+        $('.jarallax').jarallax({
+            speed: 0.5,
+            imgWidth: 1680,
+            imgHeight: 925
+        })
+    </script>
+
+    <script src="js/annualReport.js" charset="utf-8"></script>
+
+    <!-- js for back to top -->
+    <script src="js/main2.js"></script>
+    <!-- /js for back to top -->
+    <!-- js for footer -->
+    <script src="js/jQuery.lightninBox.js"></script>
+    <script type="text/javascript">
+        $(".lightninBox").lightninBox();
+    </script>
+    <!-- /js for footer -->
+    <!-- js for portfolio -->
+    <script src="js/imagesloaded.pkgd.min.js"></script>
+    <script src="js/masonry.pkgd.min.js"></script>
+    <script src="js/classie2.js"></script>
+    <script src="js/cbpGridGallery.js"></script>
+    <script>
+        new CBPGridGallery(document.getElementById('grid-gallery'));
+    </script>
+    <!-- /js for portfolio -->
+    <!-- js for about section -->
+    <script type="text/javascript" src="js/jquery.slide.js"></script>
+    <script type="text/javascript">
+        $('#slideshow-banner').slide({
+            cdTime: 5000,
+            controllerLeftButton: "images/left.png",
+            controllerRightButton: "images/right.png"
+        });
+    </script>
+    <!-- /js for about section -->
+    <!-- js for banner -->
+    <script src="js/jquery.pogo-slider.min.js"></script>
+    <script src="js/main.js"></script>
+    <!-- /js for banner -->
+    <!-- js for navigation -->
+    <script src="js/classie.js"></script>
+    <script src="js/demo1.js"></script>
+    <!-- /js for navigation -->
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/563abdb11b.js" crossorigin="anonymous"></script>
+    <!-- /js files -->
+</body>
+
+</html>
