--- a/recent_events.html
+++ b/recent_events.html
@@ -40,10 +40,77 @@
 <body>
 
     <!-- Recent Events -->
+
     <section class="team-agileinfo jarallax blog-w3layouts" id="recentEvents">
         <h3 class="text-center">EVENTS</h3>
         <span class="fa fa-star-o" aria-hidden="true"></span>
+        <div class="container gap">
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div class="blog-agile dap" data-aos="zoom-in">
+                    <a data-toggle="modal" href="#blog-w3ls1" class="blog-link4">
+                        <div class="hover01 column">
+                            <div>
+                                <figure><img src="images/Patrick.jpeg" alt="Walk to Health" class="img-responsive"></figure>
+                            </div>
+                        </div>
+                    </a>
+                    <ul class="social-w3layouts">
+
+                    </ul>
+                    <p class="blog-p1"></p>
+                    <a data-toggle="modal" href="#blog-w3ls1" class=""><i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                        Read More</a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div class="blog-agile dap" data-aos="zoom-in">
+
+                    <a data-toggle="modal" href="#blog-w3ls2" class="blog-link4">
+                        <div class="hover01 column">
+                            <div>
+                                <figure><img src="images/Hel.jpeg" alt=" Get the Git" class="img-responsive"></figure>
+                            </div>
+                        </div>
+                    </a>
+                    <ul class="social-w3layouts">
+
+                    </ul>
+                    <p class="blog-p1">The speaker was Dr. Rani Nallathamby, Associate professor, MBBS, MD, Believers Church Medical College. The session... </p>
+                    <a data-toggle="modal" href="#blog-w3ls2" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                        Read More</a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div class="blog-agile dap" data-aos="zoom-in">
+
+                    <a data-toggle="modal" href="#blog-w3ls3" class="blog-link4">
+                        <div class="hover01 column">
+                            <div>
+                                <figure><img src="RecentEventImage/Get the git.jpeg" alt="IEEE Explore" class="img-responsive">
+                                </figure>
+                            </div>
+                        </div>
+                    </a>
+                    <ul class="social-w3layouts">
+
+                    </ul>
+                    <p class="blog-p1">IEEE Computer Society Student Branch in association with the Department of Computer Science and Engineering...</p>
+                    <a data-toggle="modal" href="#blog-w3ls3" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                        Read More</a>
+                </div>
+            </div>
+
+            <div class="clearfix"></div>
+        </div>
     </section>
+
+
+
+
+
+
+
+
     <!-- Footer -->
 
     <footer id="footer">
