--- a/recent_events.html
+++ b/recent_events.html
@@ -43,6 +43,7 @@
 
     <section class="team-agileinfo jarallax blog-w3layouts" id="recentEvents">
         <h3 class="text-center">EVENTS</h3>
+        <!-- Row 1 -->
         <span class="fa fa-star-o" aria-hidden="true"></span>
         <div class="container gap">
             <div class="col-lg-4 col-md-4 col-sm-12">
@@ -105,14 +106,15 @@
             </div>
             <div class="clearfix"></div>
         </div>
+        <!-- Row 2 -->
         <div class="container gap">
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <div class="blog-agile dap" data-aos="zoom-in">
 
-                    <a data-toggle="modal" href="#blog-w3ls20" class="blog-link4">
+                    <a data-toggle="modal" href="#blog-w3ls17" class="blog-link4">
                         <div class="hover01 column">
                             <div>
-                                <figure><img src="RecentEventImage/vocalize.jpeg" alt="Vocalize" class="img-responsive">
+                                <figure><img src="RecentEventImage/robotrIEEEx.jpeg" alt="RobotrIEEEx" class="img-responsive">
                                 </figure>
                             </div>
                         </div>
@@ -121,18 +123,18 @@
 
                     </ul>
                     <p class="blog-p1">
-                        <!-- Add a summary -->
+                        As part of RobotrIEEEx, an interactive session was on Day-2 was taken by Mr. Lentin...
                     </p>
-                    <a data-toggle="modal" href="#blog-w3ls20" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                    <a data-toggle="modal" href="#blog-w3ls17" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
                                 Read More</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <div class="blog-agile dap" data-aos="zoom-in">
-                    <a data-toggle="modal" href="#blog-w3ls19" class="blog-link4">
+                    <a data-toggle="modal" href="#blog-w3ls16" class="blog-link4">
                         <div class="hover01 column">
                             <div>
-                                <figure><img src="RecentEventImage/Angular101.jpeg" alt="Angular 101" class="img-responsive">
+                                <figure><img src="RecentEventImage/espectro.jpeg" alt="Espectro" class="img-responsive">
                                 </figure>
                             </div>
                         </div>
@@ -141,19 +143,19 @@
 
                     </ul>
                     <p class="blog-p1">
-                        <!-- Add summary -->
+                        ESPECTRO, the inauguration of the IEEE Signal Processing Society SBC of MBCET, IEEE’s first society...
                     </p>
-                    <a data-toggle="modal" href="#blog-w3ls19" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                    <a data-toggle="modal" href="#blog-w3ls16" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
                                 Read More</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <div class="blog-agile dap" data-aos="zoom-in">
 
-                    <a data-toggle="modal" href="#blog-w3ls18" class="blog-link4">
+                    <a data-toggle="modal" href="#blog-w3ls15" class="blog-link4">
                         <div class="hover01 column">
                             <div>
-                                <figure><img src="RecentEventImage/signova20.jpeg" alt="Signova'20 " class="img-responsive">
+                                <figure><img src="RecentEventImage/15PracticalUse.jpg" alt="Practical Use of Technology In Times of Floods" class="img-responsive">
                                 </figure>
                             </div>
                         </div>
@@ -161,8 +163,8 @@
                     <ul class="social-w3layouts">
 
                     </ul>
-                    <p class="blog-p1">SIGNOVA’20 was an event jointly organised by IEEE SPS SBC CET, SBC TKMCE and SBC MBCET. The inauguration took place ...</p>
-                    <a data-toggle="modal" href="#blog-w3ls18" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                    <p class="blog-p1">On September 20 th , the IEEE Special Interest Group on Humanitarian Technology (SIGHT) of Mar Baselios College of Engineering...</p>
+                    <a data-toggle="modal" href="#blog-w3ls15" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
                                 Read More</a>
                 </div>
             </div>
