--- a/recent_events.html
+++ b/recent_events.html
@@ -43,8 +43,8 @@
 
     <section class="team-agileinfo jarallax blog-w3layouts" id="recentEvents">
         <h3 class="text-center">EVENTS</h3>
-        <!-- Row 1 -->
         <span class="fa fa-star-o" aria-hidden="true"></span>
+        <!-- Row 1 -->
         <div class="container gap">
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <div class="blog-agile dap" data-aos="zoom-in">
@@ -166,6 +166,70 @@
                     <p class="blog-p1">On September 20 th , the IEEE Special Interest Group on Humanitarian Technology (SIGHT) of Mar Baselios College of Engineering...</p>
                     <a data-toggle="modal" href="#blog-w3ls15" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
                                 Read More</a>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+        <!-- Row 3 -->
+        <div class="container gap">
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div class="blog-agile dap" data-aos="zoom-in">
+
+                    <a data-toggle="modal" href="#blog-w3ls20" class="blog-link4">
+                        <div class="hover01 column">
+                            <div>
+                                <figure><img src="RecentEventImage/vocalize.jpeg" alt="Vocalize" class="img-responsive">
+                                </figure>
+                            </div>
+                        </div>
+                    </a>
+                    <ul class="social-w3layouts">
+
+                    </ul>
+                    <p class="blog-p1">
+                        <!-- Add a summary -->
+                    </p>
+                    <a data-toggle="modal" href="#blog-w3ls20" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                        Read More</a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div class="blog-agile dap" data-aos="zoom-in">
+                    <a data-toggle="modal" href="#blog-w3ls19" class="blog-link4">
+                        <div class="hover01 column">
+                            <div>
+                                <figure><img src="RecentEventImage/Angular101.jpeg" alt="Angular 101" class="img-responsive">
+                                </figure>
+                            </div>
+                        </div>
+                    </a>
+                    <ul class="social-w3layouts">
+
+                    </ul>
+                    <p class="blog-p1">
+                        <!-- Add summary -->
+                    </p>
+                    <a data-toggle="modal" href="#blog-w3ls19" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                        Read More</a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <div class="blog-agile dap" data-aos="zoom-in">
+
+                    <a data-toggle="modal" href="#blog-w3ls18" class="blog-link4">
+                        <div class="hover01 column">
+                            <div>
+                                <figure><img src="RecentEventImage/signova20.jpeg" alt="Signova'20 " class="img-responsive">
+                                </figure>
+                            </div>
+                        </div>
+                    </a>
+                    <ul class="social-w3layouts">
+
+                    </ul>
+                    <p class="blog-p1">SIGNOVA’20 was an event jointly organised by IEEE SPS SBC CET, SBC TKMCE and SBC MBCET. The inauguration took place ...</p>
+                    <a data-toggle="modal" href="#blog-w3ls18" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                        Read More</a>
                 </div>
             </div>
             <div class="clearfix"></div>
