--- a/recent_events.html
+++ b/recent_events.html
@@ -175,10 +175,10 @@
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <div class="blog-agile dap" data-aos="zoom-in">
 
-                    <a data-toggle="modal" href="#blog-w3ls20" class="blog-link4">
+                    <a data-toggle="modal" href="#blog-w3ls14" class="blog-link4">
                         <div class="hover01 column">
                             <div>
-                                <figure><img src="RecentEventImage/vocalize.jpeg" alt="Vocalize" class="img-responsive">
+                                <figure><img src="RecentEventImage/Techvistara.png" alt="Techvistara" class="img-responsive">
                                 </figure>
                             </div>
                         </div>
@@ -189,16 +189,16 @@
                     <p class="blog-p1">
                         <!-- Add a summary -->
                     </p>
-                    <a data-toggle="modal" href="#blog-w3ls20" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                    <a data-toggle="modal" href="#blog-w3ls14" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
                         Read More</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <div class="blog-agile dap" data-aos="zoom-in">
-                    <a data-toggle="modal" href="#blog-w3ls19" class="blog-link4">
+                    <a data-toggle="modal" href="#blog-w3ls13" class="blog-link4">
                         <div class="hover01 column">
                             <div>
-                                <figure><img src="RecentEventImage/Angular101.jpeg" alt="Angular 101" class="img-responsive">
+                                <figure><img src="RecentEventImage/sofiaso.jpegv" alt="Sofiaso" class="img-responsive">
                                 </figure>
                             </div>
                         </div>
@@ -207,9 +207,9 @@
 
                     </ul>
                     <p class="blog-p1">
-                        <!-- Add summary -->
+                        STORIES of FITTING IN and STANDING OUT is an event conducted by IEEE MBCET SB on...
                     </p>
-                    <a data-toggle="modal" href="#blog-w3ls19" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                    <a data-toggle="modal" href="#blog-w3ls13" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
                         Read More</a>
                 </div>
             </div>
