--- a/recent_events.html
+++ b/recent_events.html
@@ -216,20 +216,19 @@
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <div class="blog-agile dap" data-aos="zoom-in">
 
-                    <a data-toggle="modal" href="#blog-w3ls18" class="blog-link4">
+                    <a data-toggle="modal" href="#blog-w3ls12" class="blog-link4">
                         <div class="hover01 column">
                             <div>
-                                <figure><img src="RecentEventImage/signova20.jpeg" alt="Signova'20 " class="img-responsive">
-                                </figure>
+                                <figure><img src="images/Hel.jpeg" alt="Walk " class="img-responsive"></figure>
                             </div>
                         </div>
                     </a>
                     <ul class="social-w3layouts">
 
                     </ul>
-                    <p class="blog-p1">SIGNOVA’20 was an event jointly organised by IEEE SPS SBC CET, SBC TKMCE and SBC MBCET. The inauguration took place ...</p>
-                    <a data-toggle="modal" href="#blog-w3ls18" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i>
-                        Read More</a>
+                    <p class="blog-p1">The speaker was Dr. Rani Nallathamby, Associate professor, MBBS, MD, Believers Church Medical College. The session... </p>
+                    <a data-toggle="modal" href="#blog-w3ls12" class=" "><i class="fa fa-hand-o-right" aria-hidden="true"></i> Read
+                    More</a>
                 </div>
             </div>
             <div class="clearfix"></div>
