--- a/recent_events.html
+++ b/recent_events.html
@@ -476,6 +476,35 @@
         </div>
         <!-- /.modal -->
 
+        <!-- Techvistara -->
+        <div class="modal fade" id="blog-w3ls14" tabindex="-1" role="dialog" aria-labelledby="largeModal" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title">Techvistara</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <img class="img-responsive team-agile" src="RecentEventImage/Techvistara.png" alt="">
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <p>
+                                <!-- Add Content -->
+                            </p>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+                <!-- /.modal-content -->
+            </div>
+            <!-- /.modal-dialog -->
+        </div>
+        <!-- /.modal -->
+
         <!-- SOFIASO -->
         <div class="modal fade" id="blog-w3ls13" tabindex="-1" role="dialog" aria-labelledby="largeModal" aria-hidden="true">
             <div class="modal-dialog modal-lg">
